[FIX] move upper menu to the top, (there was a gap of a few pixels)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,7 @@ $news-entry-sep: 1.5em !default;
   top: 0px;
   background: $background-color;
   z-index: 99999;
+  border: 0px solid black;
 
   @include media-query($on-palm) {
     position: static;
